--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.lightstreamer</groupId>
-  <artifactId>example-RaceTelemetry-adapter-java</artifactId>
+  <groupId>com.lightstreamer.examples</groupId>
+  <artifactId>example-racetelemetry-adapter-java</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>example-RaceTelemetry-adapter-java</name>
+  <name>example-raceTelemetry-adapter-java</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -35,13 +35,18 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <mainClass>adapters.web_telemetry.DataProviderImpl</mainClass>
-        </configuration>
       </plugin>
          
     </plugins>
   </build>
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Lightstreamer Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/Lightstreamer/Lightstreamer-example-RaceTelemtry-adapter-java</url>
+    </repository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
